Fix issue on mobile

--- a/source/themes/default/css/regions/_widget.scss
+++ b/source/themes/default/css/regions/_widget.scss
@@ -32,7 +32,6 @@
     background-color: $gray-lighter;
     transition: background-color 0.25s ease-out,
                 color 0.25s ease-out;
-    // transition: color 0.25s ease-out;
     color: $gray-darker;
     width: 50px;
     height: 25px;
@@ -64,7 +63,6 @@
     background-color: $gray-lighter;
     transition: background-color 0.25s ease-out,
                 color 0.25s ease-out;
-    // transition: color 0.25s ease-out;
     color: $gray-light;
     width: 50px;
     height: 25px;
@@ -73,8 +71,6 @@
     margin-bottom: 0.4em;
 
     &:hover {
-      // background-color: $white;
-      // color: $black;
       color: $white;
     }
   }
@@ -103,68 +99,67 @@
 
 
 @media all and (max-width: 800px) {
-	.widget {
-		text-align: center;
+  .widget {
+    text-align: center;
+  }
+  .widget-contact ul > li {
+    padding-bottom: 15px
+  }
 
-	}
-	.widget-contact ul > li {
-		padding-bottom: 15px
-	}
+  .widget-contact h2 {
+    display: none
+  }
 
-	.widget-contact h2 {
-		display: none
-	}
+  .download-icons,
+  .contact-icons {
+    float: none;
+  }
 
-	.contact-icons li {
-		display: inline;
-	}
-
-	.contact-icons a {
-		font-size: floor($font-size-base * 4.00); // ~36px
-		padding: 10px;
-	}
-
+  .download-icons > li,
+  .contact-icons > li {
+    display: inline;
+  }
+  .download-icons > li a,
+  .contact-icons > li a  {
+    display: inline-block;
+    margin: 0 0.4em 0.8em;
+  }
 }
 
 @media all and (max-width: 520px) {
-	.contact-icons {
-		margin-right: -20px;
-		margin-left: -20px;
-	}
-	.contact-icons a {
-		font-size: floor($font-size-base * 3.50); // ~36px
-		padding: 0;
-	}
+  .contact-icons {
+    margin-right: -20px;
+    margin-left: -20px;
+  }
 }
 
 @media all and (max-width: 360px) {
-	.contact-icons a {
-		font-size: floor($font-size-base * 2.80); // ~36px
-		padding: 0;
-	}
+  .contact-icons > li a  {
+    margin: 0 0.2em 0.8em;
+  }
 }
 
 @media print {
-	.widget {
-		text-align: right;
+  .widget {
+    text-align: right;
+  }
+  .contact-icons  {
+    margin: 0;
 
-	}
-	.contact-icons  {
-		margin: 0;
-		a {
-			margin-right: 0;
-			padding: 0;
-		}
+    a {
+      margin-right: 0;
+      padding: 0;
+    }
 
-		a > i {
-			display: none
-		}
+    a > i {
+      display: none
+    }
 
-		a > span.print {
-			display: block;
-			font-size: $font-size-base;
-			margin-right: 10px;
-		}
-	}
+    a > span.print {
+      display: block;
+      font-size: $font-size-base;
+      margin-right: 10px;
+    }
+  }
 }
 
